<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pollNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Pizza Poll" />

        <TextView
            android:id="@+id/colonTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/poll_li_colon"
            app:layout_constraintBaseline_toBaselineOf="@+id/pollNameTxt"
            app:layout_constraintStart_toEndOf="@+id/pollNameTxt" />

        <TextView
            android:id="@+id/pollAuthorTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/pollNameTxt"
            app:layout_constraintStart_toEndOf="@+id/colonTxt"
            tools:text="3401234567" />

        <TextView
            android:id="@+id/numTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/poll_li_num_1"
            app:layout_constraintBaseline_toBaselineOf="@+id/pollNameTxt"
            app:layout_constraintStart_toEndOf="@+id/pollAuthorTxt" />

        <TextView
            android:id="@+id/pollNumTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/pollNameTxt"
            app:layout_constraintStart_toEndOf="@+id/numTxt"
            tools:text="3" />

        <TextView
            android:id="@+id/numTxt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poll_li_num_2"
            app:layout_constraintBaseline_toBaselineOf="@+id/pollNameTxt"
            app:layout_constraintStart_toEndOf="@+id/pollNumTxt" />

        <TextView
            android:id="@+id/yesNumTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBaseline_toBaselineOf="@+id/pollNameTxt"
            app:layout_constraintEnd_toStartOf="@+id/yesTxt"
            tools:text="5" />

        <TextView
            android:id="@+id/yesTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/poll_li_yes"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBaseline_toBaselineOf="@+id/pollNameTxt"
            app:layout_constraintEnd_toStartOf="@+id/dashTxt" />

        <TextView
            android:id="@+id/dashTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/poll_li_dash"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBaseline_toBaselineOf="@+id/pollNameTxt"
            app:layout_constraintEnd_toStartOf="@+id/noNumTxt" />

        <TextView
            android:id="@+id/noNumTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBaseline_toBaselineOf="@+id/pollNameTxt"
            app:layout_constraintEnd_toStartOf="@+id/noTxt"
            tools:text="1" />

        <TextView
            android:id="@+id/noTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poll_li_no"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBaseline_toBaselineOf="@+id/pollNameTxt"
            app:layout_constraintEnd_toEndOf="@+id/pollQuestionTxt" />

        <TextView
            android:id="@+id/pollQuestionTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintEnd_toEndOf="@+id/pollProgressBar"
            app:layout_constraintStart_toStartOf="@+id/pollNameTxt"
            app:layout_constraintTop_toBottomOf="@+id/pollNameTxt"
            tools:text="Do you like pizza?" />

        <TextView
            android:id="@+id/percentageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/pollQuestionTxt"
            app:layout_constraintTop_toBottomOf="@+id/pollQuestionTxt"
            tools:text="76" />

        <TextView
            android:id="@+id/percentageSymTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:text="@string/poll_li_percentage"
            app:layout_constraintBaseline_toBaselineOf="@+id/percentageTxt"
            app:layout_constraintStart_toEndOf="@+id/percentageTxt" />

        <ProgressBar
            android:id="@+id/pollProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:indeterminate="false"
            android:progress="76"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/pollNameTxt"
            app:layout_constraintTop_toBottomOf="@+id/percentageTxt" />

        <TextView
            android:id="@+id/usersCountTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/pollProgressBar"
            app:layout_constraintEnd_toEndOf="@+id/pollProgressBar"
            tools:text="8" />

        <TextView
            android:id="@+id/slashTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poll_li_slash"
            app:layout_constraintBottom_toBottomOf="@+id/usersCountTxt"
            app:layout_constraintEnd_toStartOf="@+id/usersCountTxt" />

        <TextView
            android:id="@+id/answersCountTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/slashTxt"
            app:layout_constraintEnd_toStartOf="@+id/slashTxt"
            tools:text="6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>