<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePollActivity">

    <TextView
        android:id="@+id/pollUsersTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/users"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/peerTxt"
        app:layout_constraintTop_toBottomOf="@+id/pollQuestionTxt" />

    <TextView
        android:id="@+id/pollQuestionTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/poll_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/pollQuestionTxt"
        app:layout_constraintTop_toBottomOf="@+id/pollNameTxt" />

    <TextView
        android:id="@+id/pollNameTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/poll_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/pollNameTxt"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pollNameTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pollNameTxtView" />

    <EditText
        android:id="@+id/pollQuestionTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLength="130"
        android:maxLines="5"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="@+id/pollNameTxt"
        app:layout_constraintStart_toStartOf="@+id/pollNameTxt"
        app:layout_constraintTop_toBottomOf="@+id/pollQuestionTxtView" />

    <EditText
        android:id="@+id/peerTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionNone"
        android:inputType="phone"
        app:layout_constraintEnd_toStartOf="@+id/addPeerBtn"
        app:layout_constraintStart_toStartOf="@+id/pollQuestionTxt"
        app:layout_constraintTop_toBottomOf="@+id/pollUsersTxtView" />

    <Button
        android:id="@+id/sendBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="sendPollOnClick"
        android:text="@string/button_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/peersRclView"
        app:layout_constraintStart_toStartOf="@+id/peersRclView" />

    <ImageButton
        android:id="@+id/addPeerBtn"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:background="#0000"
        android:contentDescription="@string/add_peer_btn_cont_desc"
        android:onClick="addPeerBtnOnClick"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/peerTxt"
        app:layout_constraintEnd_toEndOf="@+id/peersRclView"
        app:layout_constraintTop_toTopOf="@+id/peerTxt"
        app:srcCompat="@drawable/ic_contact_phone_black_24dp" />

    <TextView
        android:id="@+id/infoTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:drawableTop="@drawable/ic_person_add_black_48dp"
        android:gravity="center"
        android:text="@string/peers_info_text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/peersRclView"
        app:layout_constraintEnd_toEndOf="@+id/peersRclView"
        app:layout_constraintStart_toStartOf="@+id/peersRclView"
        app:layout_constraintTop_toTopOf="@+id/peersRclView"
        app:layout_constraintVertical_bias="0.45" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/peersRclView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rclview_borders"
        android:requiresFadingEdge="vertical"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/sendBtn"
        app:layout_constraintEnd_toEndOf="@+id/pollQuestionTxt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/peerTxt"
        app:layout_constraintTop_toBottomOf="@+id/peerTxt"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="0" />
</androidx.constraintlayout.widget.ConstraintLayout>