<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pollNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/colonTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/poll_li_colon"
            app:layout_constraintBaseline_toBaselineOf="@+id/pollNameTxt"
            app:layout_constraintStart_toEndOf="@+id/pollNameTxt" />

        <TextView
            android:id="@+id/pollIdTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/pollNameTxt"
            app:layout_constraintStart_toEndOf="@+id/colonTxt" />

        <TextView
            android:id="@+id/pollQuestionTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/pollNameTxt"
            app:layout_constraintTop_toBottomOf="@+id/pollNameTxt" />

        <Button
            android:id="@+id/yesBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poll_li_yes"
            android:textColor="@android:color/holo_green_dark"
            app:layout_constraintEnd_toStartOf="@+id/noBtn"
            app:layout_constraintTop_toBottomOf="@+id/pollQuestionTxt" />

        <Button
            android:id="@+id/noBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poll_li_no"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="@+id/pollQuestionTxt"
            app:layout_constraintTop_toTopOf="@+id/yesBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>