<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pollNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/colonTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/poll_li_colon"
            app:layout_constraintBaseline_toBaselineOf="@+id/pollNameTxt"
            app:layout_constraintStart_toEndOf="@+id/pollNameTxt" />

        <TextView
            android:id="@+id/pollIdTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/pollNameTxt"
            app:layout_constraintStart_toEndOf="@+id/colonTxt" />

        <TextView
            android:id="@+id/yesNumTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBaseline_toBaselineOf="@+id/yesTxt"
            app:layout_constraintEnd_toStartOf="@+id/yesTxt" />

        <TextView
            android:id="@+id/yesTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/poll_li_yes"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBaseline_toBaselineOf="@+id/dashTxt"
            app:layout_constraintEnd_toStartOf="@+id/dashTxt" />

        <TextView
            android:id="@+id/dashTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/poll_li_dash"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBaseline_toBaselineOf="@+id/noNumTxt"
            app:layout_constraintEnd_toStartOf="@+id/noNumTxt" />

        <TextView
            android:id="@+id/noNumTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/colorAccent"
            app:layout_constraintBaseline_toBaselineOf="@+id/noTxt"
            app:layout_constraintEnd_toStartOf="@+id/noTxt" />

        <TextView
            android:id="@+id/noTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poll_li_no"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/colorAccent"
            app:layout_constraintBaseline_toBaselineOf="@+id/pollIdTxt"
            app:layout_constraintEnd_toEndOf="@+id/pollQuestionTxt" />

        <TextView
            android:id="@+id/pollQuestionTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/pollNameTxt"
            app:layout_constraintTop_toBottomOf="@+id/pollNameTxt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>